--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -55,7 +55,7 @@ CMD ["gunicorn", "main:app", \
     "--workers", "4", \
     "--bind", "0.0.0.0:8000", \
     "--timeout", "60", \
-    "--keepalive", "5", \
+    "--keep-alive", "5", \
     "--max-requests", "1000", \
     "--max-requests-jitter", "100", \
     "--access-logfile", "-", \
