--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,55 +1,21 @@
-# GreenOps Server - Production Dockerfile
-# Multi-stage build for minimal image size
-
-# ──────────────── Stage 1: Builder ────────────────
 FROM python:3.11-slim AS builder
-
 WORKDIR /build
-
-# Install build dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy and install dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends gcc libpq-dev && rm -rf /var/lib/apt/lists/*
 COPY requirements.txt .
-RUN pip install --upgrade pip && \
-    pip install --no-cache-dir --prefix=/install -r requirements.txt
+RUN pip install --upgrade pip && pip install --no-cache-dir --prefix=/install -r requirements.txt
 
-# ──────────────── Stage 2: Runtime ────────────────
 FROM python:3.11-slim AS runtime
-
-# Security: run as non-root
 RUN groupadd -r greenops && useradd -r -g greenops greenops
-
-# Runtime dependencies only
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libpq5 \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy installed packages from builder
+RUN apt-get update && apt-get install -y --no-install-recommends libpq5 curl && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /install /usr/local
-
-# App directory
 WORKDIR /app
 RUN chown greenops:greenops /app
-
-# Copy application code
 COPY --chown=greenops:greenops server/ /app/
 COPY --chown=greenops:greenops requirements.txt /app/
-
-# Switch to non-root user
 USER greenops
-
-# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
-
 EXPOSE 8000
-
-# Start with Gunicorn + Uvicorn workers
 CMD ["gunicorn", "main:app", \
     "--worker-class", "uvicorn.workers.UvicornWorker", \
     "--workers", "4", \
