--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,6 @@
 version: "3.9"
 
-# GreenOps Production Docker Compose
-# Usage:
-#   cp .env.example .env
-#   # Edit .env with production values
-#   docker-compose up -d
-
 services:
-  # ─────────────────────────────────────
-  # PostgreSQL Database
-  # ─────────────────────────────────────
   db:
     image: postgres:16-alpine
     container_name: greenops-db
@@ -18,7 +9,6 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-greenops}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD must be set}
       POSTGRES_DB: ${POSTGRES_DB:-greenops}
-      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./migrations:/docker-entrypoint-initdb.d:ro
@@ -30,17 +20,9 @@ services:
       start_period: 30s
     networks:
       - backend
-    # Not exposed to host - only internal access via 'server'
     expose:
       - "5432"
-    deploy:
-      resources:
-        limits:
-          memory: 512M
 
-  # ─────────────────────────────────────
-  # FastAPI Server
-  # ─────────────────────────────────────
   server:
     build:
       context: .
@@ -62,6 +44,8 @@ services:
       ELECTRICITY_COST_PER_KWH: ${ELECTRICITY_COST_PER_KWH:-0.12}
       RATE_LIMIT_REQUESTS: ${RATE_LIMIT_REQUESTS:-100}
       RATE_LIMIT_WINDOW_SECONDS: ${RATE_LIMIT_WINDOW_SECONDS:-60}
+      LOGIN_RATE_LIMIT_REQUESTS: ${LOGIN_RATE_LIMIT_REQUESTS:-10}
+      LOGIN_RATE_LIMIT_WINDOW_SECONDS: ${LOGIN_RATE_LIMIT_WINDOW_SECONDS:-300}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
     depends_on:
       db:
@@ -77,34 +61,38 @@ services:
       - frontend
     expose:
       - "8000"
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: "1.0"
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "50m"
-        max-file: "5"
 
-  # ─────────────────────────────────────
-  # Nginx Reverse Proxy
-  # ─────────────────────────────────────
+  dashboard:
+    build:
+      context: .
+      dockerfile: Dockerfile.dashboard
+    container_name: greenops-dashboard
+    restart: unless-stopped
+    networks:
+      - frontend
+    expose:
+      - "3000"
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
+
   nginx:
     image: nginx:1.25-alpine
     container_name: greenops-nginx
     restart: unless-stopped
     ports:
       - "${HTTP_PORT:-80}:80"
-      - "${HTTPS_PORT:-443}:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
       - nginx_logs:/var/log/nginx
-      - ${SSL_CERT_PATH:-./nginx/certs}:/etc/nginx/certs:ro
     depends_on:
       server:
+        condition: service_healthy
+      dashboard:
         condition: service_healthy
     networks:
       - frontend
@@ -113,11 +101,6 @@ services:
       interval: 30s
       timeout: 5s
       retries: 3
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "50m"
-        max-file: "5"
 
 volumes:
   postgres_data:
