--- a/nginx/conf.d/greenops.conf
+++ b/nginx/conf.d/greenops.conf
@@ -1,17 +1,17 @@
-# GreenOps HTTP Virtual Host
-# Handles both dashboard (/) and API (/api) proxying
-
 upstream greenops_api {
     server server:8000;
     keepalive 32;
 }
 
-# HTTP server (redirect to HTTPS if cert available, else serve directly)
+upstream greenops_dashboard {
+    server dashboard:3000;
+    keepalive 16;
+}
+
 server {
     listen 80;
     server_name _;
 
-    # Allow health checks without redirect
     location /health {
         proxy_pass http://greenops_api/health;
         proxy_set_header Host $host;
@@ -20,65 +20,44 @@ server {
         access_log off;
     }
 
-    # Rate limited API
     location /api/auth/login {
         limit_req zone=api_login burst=5 nodelay;
         limit_req_status 429;
-        limit_conn conn_limit 20;
         proxy_pass http://greenops_api;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /api/agents/ {
         limit_req zone=api_agents burst=50 nodelay;
         limit_req_status 429;
         proxy_pass http://greenops_api;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /api/ {
         limit_req zone=api_global burst=30 nodelay;
         limit_req_status 429;
-        limit_conn conn_limit 50;
         proxy_pass http://greenops_api;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Dashboard SPA - serve static files, fallback to index.html
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
-
-        # Cache control for static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            access_log off;
-        }
-
-        # Never cache the HTML entry point
-        location = /index.html {
-            add_header Cache-Control "no-store, no-cache, must-revalidate";
-        }
+        proxy_pass http://greenops_dashboard;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "";
     }
 }
-
-# HTTPS server (uncomment when SSL certificate is available)
-# server {
-#     listen 443 ssl http2;
-#     server_name your-domain.com;
-#
-#     ssl_certificate /etc/nginx/certs/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/certs/privkey.pem;
-#
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-#     ssl_prefer_server_ciphers off;
-#     ssl_session_cache shared:SSL:10m;
-#     ssl_session_timeout 1d;
-#     ssl_session_tickets off;
-#     ssl_stapling on;
-#     ssl_stapling_verify on;
-#
-#     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
-#
-#     # (same location blocks as HTTP above)
-# }
