--- a/Dockerfile.dashboard
+++ b/Dockerfile.dashboard
@@ -1,15 +1,21 @@
-FROM node:20-alpine AS builder
+FROM node:18-alpine AS builder
 WORKDIR /app
-COPY dashboard/package.json ./
-RUN npm install --legacy-peer-deps
+
+COPY dashboard/package*.json ./
+RUN npm install
+
 COPY dashboard/ ./
 RUN npm run build
 
-FROM nginx:1.25-alpine AS runtime
-COPY --from=builder /app/build /usr/share/nginx/html
-COPY nginx/dashboard.conf /etc/nginx/conf.d/default.conf
-RUN touch /var/run/nginx.pid
+FROM node:18-alpine AS runner
+WORKDIR /app
+
+ENV NODE_ENV=production
+
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
+COPY --from=builder /app/public ./public
+
 EXPOSE 3000
-HEALTHCHECK --interval=30s --timeout=5s --retries=3 \
-    CMD wget -q --spider http://localhost:3000 || exit 1
-CMD ["nginx", "-g", "daemon off;"]
+
+CMD ["node", "server.js"]
