--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,11 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-greenops}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD must be set}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-greenops}
       POSTGRES_DB: ${POSTGRES_DB:-greenops}
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./migrations:/docker-entrypoint-initdb.d:ro
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-greenops} -d ${POSTGRES_DB:-greenops}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
     networks:
       - backend
     expose:
@@ -30,32 +24,10 @@ services:
     container_name: greenops-server
     restart: unless-stopped
     environment:
-      ENV: ${ENV:-production}
-      DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER:-greenops}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-greenops}
-      JWT_SECRET_KEY: ${JWT_SECRET_KEY:?JWT_SECRET_KEY must be set}
-      JWT_ALGORITHM: ${JWT_ALGORITHM:-HS256}
-      ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES:-60}
-      REFRESH_TOKEN_EXPIRE_DAYS: ${REFRESH_TOKEN_EXPIRE_DAYS:-30}
-      CORS_ORIGINS: ${CORS_ORIGINS:-http://localhost}
-      INITIAL_ADMIN_USERNAME: ${INITIAL_ADMIN_USERNAME:-admin}
-      INITIAL_ADMIN_PASSWORD: ${INITIAL_ADMIN_PASSWORD:?INITIAL_ADMIN_PASSWORD must be set}
-      IDLE_POWER_WATTS: ${IDLE_POWER_WATTS:-65}
-      ACTIVE_POWER_WATTS: ${ACTIVE_POWER_WATTS:-120}
-      ELECTRICITY_COST_PER_KWH: ${ELECTRICITY_COST_PER_KWH:-0.12}
-      RATE_LIMIT_REQUESTS: ${RATE_LIMIT_REQUESTS:-100}
-      RATE_LIMIT_WINDOW_SECONDS: ${RATE_LIMIT_WINDOW_SECONDS:-60}
-      LOGIN_RATE_LIMIT_REQUESTS: ${LOGIN_RATE_LIMIT_REQUESTS:-10}
-      LOGIN_RATE_LIMIT_WINDOW_SECONDS: ${LOGIN_RATE_LIMIT_WINDOW_SECONDS:-300}
-      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+      DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER:-greenops}:${POSTGRES_PASSWORD:-greenops}@db:5432/${POSTGRES_DB:-greenops}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY:-supersecret}
     depends_on:
-      db:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+      - db
     networks:
       - backend
       - frontend
@@ -68,51 +40,33 @@ services:
       dockerfile: Dockerfile.dashboard
     container_name: greenops-dashboard
     restart: unless-stopped
+    depends_on:
+      - server
     networks:
       - frontend
     expose:
       - "3000"
-    healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:3000"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 30s
 
   nginx:
     image: nginx:1.25-alpine
     container_name: greenops-nginx
     restart: unless-stopped
     ports:
-      - "${HTTP_PORT:-80}:80"
+      - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      - nginx_logs:/var/log/nginx
     depends_on:
-      server:
-        condition: service_healthy
-      dashboard:
-        condition: service_healthy
+      - server
+      - dashboard
     networks:
       - frontend
-    healthcheck:
-      test: ["CMD", "nginx", "-t"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
 
 volumes:
   postgres_data:
-    name: greenops_postgres_data
-  nginx_logs:
-    name: greenops_nginx_logs
 
 networks:
   backend:
-    name: greenops_backend
     driver: bridge
-    internal: true
   frontend:
-    name: greenops_frontend
     driver: bridge
