--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,8 @@ services:
     networks:
       - backend
       - frontend
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
 
   dashboard:
     build:
