--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,65 +1,113 @@
-user nginx;
-worker_processes auto;
-worker_rlimit_nofile 65535;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+##############################################################################
+# GreenOps — Nginx main configuration
+# /etc/nginx/nginx.conf
+#
+# Responsibilities:
+#   - Worker tuning
+#   - Logging format
+#   - Gzip compression
+#   - Security headers (applied globally)
+#   - Rate limit zones
+#   - Include per-service server block
+##############################################################################
+
+user  nginx;
+worker_processes  auto;                  # one per CPU core
+worker_rlimit_nofile  65535;             # max open files per worker
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
 events {
-    worker_connections 4096;
-    multi_accept on;
-    use epoll;
+    worker_connections  4096;
+    multi_accept        on;
+    use                 epoll;           # Linux kernel event model — most efficient
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    # ── MIME types ──────────────────────────────────────────────────────────
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" rt=$request_time';
+    # ── Logging ─────────────────────────────────────────────────────────────
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" rt=$request_time '
+                      'upstream=$upstream_response_time';
 
-    access_log /var/log/nginx/access.log main buffer=32k flush=5s;
-    error_log /var/log/nginx/error.log warn;
+    access_log  /var/log/nginx/access.log  main  buffer=32k  flush=5s;
+    error_log   /var/log/nginx/error.log   warn;
 
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    server_tokens off;
+    # ── Performance ─────────────────────────────────────────────────────────
+    sendfile            on;
+    tcp_nopush          on;
+    tcp_nodelay         on;
+    keepalive_timeout   65;
+    server_tokens       off;             # hide nginx version
 
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1000;
-    gzip_comp_level 5;
-    gzip_proxied any;
-    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss image/svg+xml;
+    # ── Request limits ──────────────────────────────────────────────────────
+    client_body_buffer_size    16k;
+    client_max_body_size       16m;
+    client_body_timeout        30s;
+    client_header_timeout      30s;
+    send_timeout               30s;
 
-    client_body_buffer_size 16k;
-    client_max_body_size 16m;
+    # ── Proxy timeouts ──────────────────────────────────────────────────────
+    proxy_connect_timeout  10s;
+    proxy_send_timeout     60s;
+    proxy_read_timeout     60s;
+    proxy_buffering        on;
+    proxy_buffer_size      8k;
+    proxy_buffers          8 16k;
 
-    client_body_timeout 30s;
-    client_header_timeout 30s;
-    send_timeout 30s;
-    proxy_connect_timeout 10s;
-    proxy_send_timeout 30s;
-    proxy_read_timeout 30s;
+    # Preserve real client IP even when behind a load balancer
+    proxy_set_header  Host              $host;
+    proxy_set_header  X-Real-IP         $remote_addr;
+    proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header  X-Forwarded-Proto $scheme;
+    proxy_http_version  1.1;
 
-    add_header X-Frame-Options "DENY" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    # ── Gzip ────────────────────────────────────────────────────────────────
+    gzip              on;
+    gzip_vary         on;
+    gzip_min_length   1000;
+    gzip_comp_level   5;
+    gzip_proxied      any;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/json
+        application/javascript
+        application/xml+rss
+        image/svg+xml;
 
-    limit_req_zone $binary_remote_addr zone=api_global:20m rate=100r/m;
-    limit_req_zone $binary_remote_addr zone=api_login:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=api_agents:20m rate=200r/m;
-    limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
+    # ── Security headers (applied to every response) ─────────────────────
+    add_header  X-Frame-Options           "DENY"                          always;
+    add_header  X-Content-Type-Options    "nosniff"                       always;
+    add_header  X-XSS-Protection          "1; mode=block"                 always;
+    add_header  Referrer-Policy           "strict-origin-when-cross-origin" always;
+    add_header  Permissions-Policy        "geolocation=(), microphone=(), camera=()" always;
 
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_buffering on;
+    # ── Rate limit zones ────────────────────────────────────────────────────
+    # Zone memory: 1MB ≈ 16,000 unique IPs
+    limit_req_zone   $binary_remote_addr  zone=global:20m    rate=100r/m;
+    limit_req_zone   $binary_remote_addr  zone=login:10m     rate=10r/m;
+    limit_req_zone   $binary_remote_addr  zone=agents:20m    rate=300r/m;
+    limit_conn_zone  $binary_remote_addr  zone=conn:10m;
 
+    # ── Upstream definitions ─────────────────────────────────────────────
+    upstream greenops_api {
+        server server:8000;
+        keepalive 32;                    # persistent connections to FastAPI
+    }
+
+    upstream greenops_dashboard {
+        server dashboard:3000;
+        keepalive 16;
+    }
+
+    # ── Virtual host / server blocks ────────────────────────────────────
     include /etc/nginx/conf.d/*.conf;
 }
