--- a/nginx/conf.d/greenops.conf
+++ b/nginx/conf.d/greenops.conf
@@ -1,63 +1,102 @@
-upstream greenops_api {
-    server server:8000;
-    keepalive 32;
-}
-
-upstream greenops_dashboard {
-    server dashboard:3000;
-    keepalive 16;
-}
+i##############################################################################
+# GreenOps — conf.d/greenops.conf
+#
+# This file contains only the server {} block.
+# All upstream {}, limit_req_zone {}, and http-level directives live in
+# nginx.conf to avoid "directive not allowed here" errors.
+##############################################################################
 
 server {
-    listen 80;
-    server_name _;
+    listen       80;
+    server_name  _;               # catch-all; replace with your domain name
 
-    location /health {
-        proxy_pass http://greenops_api/health;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        access_log off;
+    # ── Connection limits ────────────────────────────────────────────────
+    limit_conn conn 50;
+
+    # ── /health — internal health probe, no rate limit, no access log ────
+    # nginx itself proxies this so that the docker compose healthcheck on
+    # nginx can verify the full proxy chain is working.
+    location = /health {
+        access_log  off;
+        proxy_pass  http://greenops_api/health;
     }
 
-    location /api/auth/login {
-        limit_req zone=api_login burst=5 nodelay;
+    # ── /api/auth/login — aggressive rate limiting ───────────────────────
+    # 10 req/min per IP with burst of 5 queued. Excess → 429.
+    location = /api/auth/login {
+        limit_req        zone=login  burst=5  nodelay;
         limit_req_status 429;
-        proxy_pass http://greenops_api;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_pass  http://greenops_api;
     }
 
-    location /api/agents/ {
-        limit_req zone=api_agents burst=50 nodelay;
+    # ── /api/agents/ — looser limit for frequent heartbeats ─────────────
+    location ^~ /api/agents/ {
+        limit_req        zone=agents  burst=60  nodelay;
         limit_req_status 429;
-        proxy_pass http://greenops_api;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_pass  http://greenops_api;
     }
 
-    location /api/ {
-        limit_req zone=api_global burst=30 nodelay;
+    # ── /api/ — all other API endpoints ─────────────────────────────────
+    location ^~ /api/ {
+        limit_req        zone=global  burst=30  nodelay;
         limit_req_status 429;
-        proxy_pass http://greenops_api;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Disable docs endpoints in production (server returns 404 already,
+        # but belt-and-suspenders approach at the proxy layer too).
+        location ~* ^/api/(docs|redoc|openapi\.json) {
+            return 404;
+        }
+
+        proxy_pass  http://greenops_api;
     }
 
+    # ── / — Next.js dashboard ────────────────────────────────────────────
     location / {
-        proxy_pass http://greenops_dashboard;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "";
+        limit_req        zone=global  burst=50  nodelay;
+        limit_req_status 429;
+
+        proxy_pass  http://greenops_dashboard;
+
+        # WebSocket support for Next.js hot reload (used in dev; harmless in prod)
+        proxy_set_header  Upgrade     $http_upgrade;
+        proxy_set_header  Connection  "upgrade";
+
+        # Next.js needs slightly longer timeouts for SSR pages
+        proxy_read_timeout  120s;
+        proxy_send_timeout  120s;
+    }
+
+    # ── Static asset caching ─────────────────────────────────────────────
+    # Next.js serves /_next/static/ with content-hashed filenames.
+    # Cache aggressively; the hash changes when content changes.
+    location ^~ /_next/static/ {
+        proxy_pass         http://greenops_dashboard;
+        proxy_cache_valid  200 1y;
+        add_header         Cache-Control "public, max-age=31536000, immutable";
+        access_log         off;
+    }
+
+    # ── Deny hidden files ─────────────────────────────────────────────────
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # ── Custom error pages ───────────────────────────────────────────────
+    error_page 429 /429.json;
+    location = /429.json {
+        internal;
+        default_type application/json;
+        return 429 '{"error":"rate_limit_exceeded","message":"Too many requests. Please slow down."}';
+    }
+
+    error_page 502 503 504 /5xx.json;
+    location = /5xx.json {
+        internal;
+        default_type application/json;
+        return 503 '{"error":"service_unavailable","message":"Service temporarily unavailable."}';
     }
 }
