--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,26 @@
+version: "3.9"
+
 # =============================================================================
 # GreenOps — Production Docker Compose
 # =============================================================================
-# Architecture:
-#   internet → nginx (80) → [server:8000 | dashboard:3000]
-#   server → db:5432  (internal only, never exposed)
 #
-# Startup order (enforced by healthchecks):
-#   db (healthy) → server (healthy) → dashboard → nginx
+# Startup order (strictly enforced by healthchecks):
+#   db (healthy) → server (healthy) → dashboard (healthy) → nginx
 #
 # Networks:
-#   backend  — server + db only  (db is invisible to nginx/dashboard)
-#   frontend — nginx + server + dashboard
+#   backend  — db + server only. DB is never reachable from nginx or dashboard.
+#   frontend — nginx + server + dashboard.
+#
+# Port policy:
+#   ONLY nginx binds a host port (80).
+#   server and dashboard use expose — internal only, unreachable from host.
+#   db uses expose — internal only, never accessible from outside Docker.
+#
+# Multi-worker admin creation race condition:
+#   Solved by Gunicorn preload_app=True in gunicorn.conf.py.
+#   The lifespan startup function runs ONCE in the master process before
+#   workers are forked. Workers inherit the already-initialized state.
+#   ensure_admin_exists() is also idempotent + IntegrityError-safe as backup.
 #
 # =============================================================================
 
@@ -25,89 +35,105 @@ services:
     restart: unless-stopped
 
     environment:
-      POSTGRES_USER:     ${POSTGRES_USER:-greenops}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}           # required — no default
-      POSTGRES_DB:       ${POSTGRES_DB:-greenops}
-      # Tuning for small-to-medium SaaS workload on a 2-4 vCPU VPS
-      POSTGRES_INITDB_ARGS: "--encoding=UTF8 --locale=C"
+      POSTGRES_USER:              ${POSTGRES_USER:-greenops}
+      POSTGRES_PASSWORD:          ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
+      POSTGRES_DB:                ${POSTGRES_DB:-greenops}
+      POSTGRES_INITDB_ARGS:       "--encoding=UTF8 --locale=C"
+      # Tune shared_buffers for small VPS (256MB RAM allocation to PG)
+      POSTGRES_HOST_AUTH_METHOD:  scram-sha-256
 
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      # Migration SQL is run once on first container start (initdb.d)
+      # SQL files in this directory are run ONCE on first container creation.
+      # Subsequent restarts skip them. Safe to keep multiple migration files.
       - ./migrations:/docker-entrypoint-initdb.d:ro
 
     networks:
       - backend
 
-    # DB is NEVER exposed to host.  Server connects via internal Docker DNS.
-    expose:
-      - "5432"
+    # expose = internal Docker network only. NOT a host port binding.
+    ports:
+      - "8000:8000"
 
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-greenops} -d ${POSTGRES_DB:-greenops}"]
+      # pg_isready checks that PostgreSQL is accepting connections.
+      # The -d flag ensures the specific database exists and is ready.
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-greenops} -d ${POSTGRES_DB:-greenops} -q"]
       interval: 5s
       timeout: 5s
-      retries: 10
-      start_period: 10s
+      retries: 12          # 60s total before giving up
+      start_period: 15s    # grace period for PG to initialize data directory
 
-    # Limit DB memory on shared VPS
     deploy:
       resources:
         limits:
           memory: 512M
+        reservations:
+          memory: 128M
 
   # ---------------------------------------------------------------------------
-  # FastAPI Backend (Gunicorn + Uvicorn workers)
+  # FastAPI Backend — Gunicorn + Uvicorn workers
   # ---------------------------------------------------------------------------
   server:
     build:
       context: .
       dockerfile: Dockerfile.server
+      # Cache busting: rebuild if requirements change
+      args:
+        BUILDKIT_INLINE_CACHE: "1"
     container_name: greenops-server
     restart: unless-stopped
 
     environment:
-      # Constructed from individual vars so DB password is never double-stored
-      DATABASE_URL: "postgresql+asyncpg://${POSTGRES_USER:-greenops}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-greenops}"
+      # DATABASE_URL is assembled here so the password is never duplicated
+      # in .env as both POSTGRES_PASSWORD and inside DATABASE_URL.
+      DATABASE_URL: "postgresql+asyncpg://${POSTGRES_USER:-greenops}:${POSTGRES_PASSWORD:?}@db:5432/${POSTGRES_DB:-greenops}"
 
-      ENV:                        ${ENV:-production}
-      DEBUG:                      ${DEBUG:-false}
-      JWT_SECRET_KEY:             ${JWT_SECRET_KEY}          # required
-      INITIAL_ADMIN_USERNAME:     ${INITIAL_ADMIN_USERNAME:-admin}
-      INITIAL_ADMIN_PASSWORD:     ${INITIAL_ADMIN_PASSWORD}  # required
-      CORS_ORIGINS:               ${CORS_ORIGINS:-http://localhost}
+      ENV:                          ${ENV:-production}
+      DEBUG:                        ${DEBUG:-false}
+      JWT_SECRET_KEY:               ${JWT_SECRET_KEY:?JWT_SECRET_KEY is required}
+      INITIAL_ADMIN_USERNAME:       ${INITIAL_ADMIN_USERNAME:-admin}
+      INITIAL_ADMIN_PASSWORD:       ${INITIAL_ADMIN_PASSWORD:?INITIAL_ADMIN_PASSWORD is required}
+      CORS_ORIGINS:                 ${CORS_ORIGINS:-http://localhost}
       ACCESS_TOKEN_EXPIRE_MINUTES:  ${ACCESS_TOKEN_EXPIRE_MINUTES:-60}
       REFRESH_TOKEN_EXPIRE_DAYS:    ${REFRESH_TOKEN_EXPIRE_DAYS:-30}
-      IDLE_POWER_WATTS:           ${IDLE_POWER_WATTS:-65}
-      ACTIVE_POWER_WATTS:         ${ACTIVE_POWER_WATTS:-120}
-      ELECTRICITY_COST_PER_KWH:   ${ELECTRICITY_COST_PER_KWH:-0.12}
-      LOG_LEVEL:                  ${LOG_LEVEL:-INFO}
-      # Gunicorn: 2×vCPU+1 is the standard formula; cap at 4 for a VPS
-      WORKERS:                    ${WORKERS:-4}
+      RATE_LIMIT_REQUESTS:          ${RATE_LIMIT_REQUESTS:-100}
+      RATE_LIMIT_WINDOW_SECONDS:    ${RATE_LIMIT_WINDOW_SECONDS:-60}
+      LOGIN_RATE_LIMIT_REQUESTS:    ${LOGIN_RATE_LIMIT_REQUESTS:-10}
+      LOGIN_RATE_LIMIT_WINDOW_SECONDS: ${LOGIN_RATE_LIMIT_WINDOW_SECONDS:-300}
+      IDLE_POWER_WATTS:             ${IDLE_POWER_WATTS:-65}
+      ACTIVE_POWER_WATTS:           ${ACTIVE_POWER_WATTS:-120}
+      ELECTRICITY_COST_PER_KWH:     ${ELECTRICITY_COST_PER_KWH:-0.12}
+      LOG_LEVEL:                    ${LOG_LEVEL:-INFO}
+      WORKERS:                      ${WORKERS:-4}
 
     depends_on:
       db:
-        condition: service_healthy   # wait for pg_isready before starting
+        condition: service_healthy   # hard gate: do not start until pg_isready passes
 
     networks:
-      - backend
-      - frontend
+      - backend    # talks to db
+      - frontend   # nginx talks to server
 
-    # NOT exposed to host — nginx proxies to server:8000 internally.
+    # Internal only — nginx proxies inbound traffic. Host cannot reach :8000 directly.
     expose:
       - "8000"
 
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
+      # The /health endpoint checks DB connectivity internally.
+      # curl -f returns exit code 22 on HTTP 4xx/5xx, exit code 7 on connection refused.
+      test: ["CMD-SHELL", "curl -sf http://localhost:8000/health | grep -q '\"status\":\"healthy\"' || exit 1"]
       interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s   # allow Gunicorn workers + DB init to complete
+      timeout: 8s
+      retries: 6
+      start_period: 40s   # Gunicorn worker spawn + DB init + admin creation
 
     deploy:
       resources:
         limits:
           memory: 512M
+        reservations:
+          memory: 128M
 
   # ---------------------------------------------------------------------------
   # Next.js Dashboard
@@ -124,7 +150,7 @@ services:
 
     depends_on:
       server:
-        condition: service_healthy   # don't start until API is ready
+        condition: service_healthy   # don't start UI until API is confirmed ready
 
     networks:
       - frontend
@@ -132,13 +158,22 @@ services:
     expose:
       - "3000"
 
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:3000/ > /dev/null 2>&1 || exit 1"]
+      interval: 15s
+      timeout: 8s
+      retries: 4
+      start_period: 30s
+
     deploy:
       resources:
         limits:
           memory: 256M
+        reservations:
+          memory: 64M
 
   # ---------------------------------------------------------------------------
-  # Nginx Reverse Proxy — the ONLY service with a host port binding
+  # Nginx — the ONLY service with a host port binding
   # ---------------------------------------------------------------------------
   nginx:
     build:
@@ -148,14 +183,15 @@ services:
     restart: unless-stopped
 
     ports:
+      # This is the ONLY host port binding in the entire stack.
+      # Everything else uses expose (internal only).
       - "${HTTP_PORT:-80}:80"
-      # Uncomment when TLS is configured:
+      # TLS — uncomment when certificates are in place:
       # - "${HTTPS_PORT:-443}:443"
 
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d/greenops.conf:/etc/nginx/conf.d/greenops.conf:ro
-      # Mount certs directory (empty is fine until TLS is added)
       - ./nginx/certs:/etc/nginx/certs:ro
 
     depends_on:
@@ -165,10 +201,10 @@ services:
         condition: service_healthy
 
     networks:
-      - frontend
+      - frontend   # nginx only needs to reach server and dashboard
 
     healthcheck:
-      test: ["CMD-SHELL", "nginx -t && wget -qO- http://localhost/health || exit 1"]
+      test: ["CMD-SHELL", "wget -qO- http://localhost/health > /dev/null 2>&1 || exit 1"]
       interval: 15s
       timeout: 5s
       retries: 3
@@ -190,10 +226,10 @@ volumes:
 # Networks
 # =============================================================================
 networks:
-  # backend: server ↔ db only.  db is invisible to nginx and dashboard.
+  # backend: server ↔ db only.
+  # db is invisible to nginx and dashboard — correct principle of least privilege.
   backend:
     driver: bridge
-    internal: false   # server needs outbound for DNS/updates if required
 
   # frontend: nginx ↔ server ↔ dashboard
   frontend:
