--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,39 +1,35 @@
-##############################################################################
-# GreenOps — Nginx main configuration
+##############################################################################
+# GreenOps — nginx.conf
 # /etc/nginx/nginx.conf
 #
-# Responsibilities:
-#   - Worker tuning
-#   - Logging format
-#   - Gzip compression
-#   - Security headers (applied globally)
-#   - Rate limit zones
-#   - Include per-service server block
+# IMPORTANT: upstream blocks and limit_req_zone MUST be inside the http {}
+# block, not in conf.d/ server blocks. This was the original source of the
+# "invalid directive" crash. All zones defined here, referenced in conf.d/.
 ##############################################################################
 
 user  nginx;
-worker_processes  auto;                  # one per CPU core
-worker_rlimit_nofile  65535;             # max open files per worker
+worker_processes  auto;              # one per vCPU
+worker_rlimit_nofile  65535;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /var/log/nginx/error.log  warn;
 pid        /var/run/nginx.pid;
 
 events {
     worker_connections  4096;
     multi_accept        on;
-    use                 epoll;           # Linux kernel event model — most efficient
+    use                 epoll;       # Linux optimal event model
 }
 
 http {
-    # ── MIME types ──────────────────────────────────────────────────────────
+    # ── MIME ────────────────────────────────────────────────────────────────
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
     # ── Logging ─────────────────────────────────────────────────────────────
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" rt=$request_time '
-                      'upstream=$upstream_response_time';
+                      '"$http_user_agent" '
+                      'rt=$request_time urt=$upstream_response_time';
 
     access_log  /var/log/nginx/access.log  main  buffer=32k  flush=5s;
     error_log   /var/log/nginx/error.log   warn;
@@ -43,16 +39,22 @@ http {
     tcp_nopush          on;
     tcp_nodelay         on;
     keepalive_timeout   65;
-    server_tokens       off;             # hide nginx version
+    server_tokens       off;         # never reveal nginx version
 
-    # ── Request limits ──────────────────────────────────────────────────────
-    client_body_buffer_size    16k;
-    client_max_body_size       16m;
-    client_body_timeout        30s;
-    client_header_timeout      30s;
-    send_timeout               30s;
+    # ── Request size limits ─────────────────────────────────────────────────
+    client_body_buffer_size   16k;
+    client_max_body_size      16m;
+    client_body_timeout       30s;
+    client_header_timeout     30s;
+    send_timeout              30s;
 
-    # ── Proxy timeouts ──────────────────────────────────────────────────────
+    # ── Proxy defaults (inherited by all location blocks) ───────────────────
+    proxy_http_version  1.1;
+    proxy_set_header    Host               $host;
+    proxy_set_header    X-Real-IP          $remote_addr;
+    proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+    proxy_set_header    X-Forwarded-Proto  $scheme;
+    proxy_set_header    Connection         "";   # enable keepalive to upstreams
     proxy_connect_timeout  10s;
     proxy_send_timeout     60s;
     proxy_read_timeout     60s;
@@ -60,17 +62,10 @@ http {
     proxy_buffer_size      8k;
     proxy_buffers          8 16k;
 
-    # Preserve real client IP even when behind a load balancer
-    proxy_set_header  Host              $host;
-    proxy_set_header  X-Real-IP         $remote_addr;
-    proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
-    proxy_set_header  X-Forwarded-Proto $scheme;
-    proxy_http_version  1.1;
-
     # ── Gzip ────────────────────────────────────────────────────────────────
     gzip              on;
     gzip_vary         on;
-    gzip_min_length   1000;
+    gzip_min_length   1024;
     gzip_comp_level   5;
     gzip_proxied      any;
     gzip_types
@@ -81,26 +76,33 @@ http {
         application/json
         application/javascript
         application/xml+rss
-        image/svg+xml;
+        application/x-javascript
+        image/svg+xml
+        font/woff
+        font/woff2;
 
-    # ── Security headers (applied to every response) ─────────────────────
-    add_header  X-Frame-Options           "DENY"                          always;
-    add_header  X-Content-Type-Options    "nosniff"                       always;
-    add_header  X-XSS-Protection          "1; mode=block"                 always;
-    add_header  Referrer-Policy           "strict-origin-when-cross-origin" always;
-    add_header  Permissions-Policy        "geolocation=(), microphone=(), camera=()" always;
+    # ── Security headers (applied to every response globally) ────────────────
+    add_header  X-Frame-Options            "DENY"                           always;
+    add_header  X-Content-Type-Options     "nosniff"                        always;
+    add_header  X-XSS-Protection           "1; mode=block"                  always;
+    add_header  Referrer-Policy            "strict-origin-when-cross-origin" always;
+    add_header  Permissions-Policy         "geolocation=(), microphone=(), camera=()" always;
 
     # ── Rate limit zones ────────────────────────────────────────────────────
-    # Zone memory: 1MB ≈ 16,000 unique IPs
+    # These MUST be here in the http {} block — not in server {} or location {}.
+    # 1 MB of shared memory ≈ 16,000 unique IPs tracked.
     limit_req_zone   $binary_remote_addr  zone=global:20m    rate=100r/m;
     limit_req_zone   $binary_remote_addr  zone=login:10m     rate=10r/m;
     limit_req_zone   $binary_remote_addr  zone=agents:20m    rate=300r/m;
     limit_conn_zone  $binary_remote_addr  zone=conn:10m;
 
-    # ── Upstream definitions ─────────────────────────────────────────────
+    # ── Upstream pools ──────────────────────────────────────────────────────
+    # These MUST be here in the http {} block, NOT in conf.d/ server blocks.
+    # Placing upstream inside a server {} causes "upstream directive not allowed here".
+
     upstream greenops_api {
         server server:8000;
-        keepalive 32;                    # persistent connections to FastAPI
+        keepalive 32;               # persistent connections to Gunicorn
     }
 
     upstream greenops_dashboard {
@@ -108,6 +110,6 @@ http {
         keepalive 16;
     }
 
-    # ── Virtual host / server blocks ────────────────────────────────────
+    # ── Include per-service virtual hosts ────────────────────────────────
     include /etc/nginx/conf.d/*.conf;
 }
