--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,10 @@ POSTGRES_DB=greenops
 # Generate: python3 -c "import secrets; print(secrets.token_urlsafe(48))"
 JWT_SECRET_KEY=CHANGE_ME_generate_with_command_above
 
+# Default admin credentials — change after first login via the dashboard.
+# Username is always lowercased on creation.
 INITIAL_ADMIN_USERNAME=admin
-INITIAL_ADMIN_PASSWORD=CHANGE_ME_at_least_12_chars
+INITIAL_ADMIN_PASSWORD=admin123
 
 CORS_ORIGINS=http://localhost,https://your-domain.com
 
@@ -31,3 +33,4 @@ ELECTRICITY_COST_PER_KWH=0.12
 HTTP_PORT=80
 HTTPS_PORT=443
 LOG_LEVEL=INFO
+
