--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,56 @@
+# =============================================================================
 # GreenOps Environment Configuration
-# Copy to .env and fill in your values
+# Copy to .env before starting:  cp .env.example .env
+#
+# REQUIRED fields must be set — the app will refuse to start without them.
+# OPTIONAL fields have working defaults shown below.
+# =============================================================================
 
+# ── Environment ──────────────────────────────────────────────────────────────
 ENV=production
 DEBUG=false
 
+# ── Database ──────────────────────────────────────────────────────────────────
+# IMPORTANT: Set these BEFORE running docker compose up for the first time.
+# PostgreSQL bakes these credentials into the data volume on first init.
+# If you change them after first run, the server will fail to authenticate.
+# To change credentials on an existing install: docker compose down -v && docker compose up
 POSTGRES_USER=greenops
-POSTGRES_PASSWORD=CHANGE_ME_strong_db_password_here
+POSTGRES_PASSWORD=CHANGE_ME_strong_password_here
 POSTGRES_DB=greenops
 
-# Generate: python3 -c "import secrets; print(secrets.token_urlsafe(48))"
-JWT_SECRET_KEY=CHANGE_ME_generate_with_command_above
+# ── JWT ───────────────────────────────────────────────────────────────────────
+# REQUIRED. Generate:  python3 -c "import secrets; print(secrets.token_urlsafe(48))"
+JWT_SECRET_KEY=4i4I8C3nvV--LkSWpFSlRag0K3uUzGyNM1Tg0sEL7_CoI_iJoL1qtTaqzJs5NMok
 
-# Default admin credentials — change after first login via the dashboard.
-# Username is always lowercased on creation.
+# ── Admin bootstrap ──────────────────────────────────────────────────────────
+# Credentials for the admin account created on first startup.
+# If admin already exists in the database, these are ignored.
+# Change the password from the dashboard after first login.
 INITIAL_ADMIN_USERNAME=admin
 INITIAL_ADMIN_PASSWORD=admin123
 
+# ── CORS ──────────────────────────────────────────────────────────────────────
 CORS_ORIGINS=http://localhost,https://your-domain.com
 
+# ── Token lifetimes ───────────────────────────────────────────────────────────
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
+# ── Rate limiting ─────────────────────────────────────────────────────────────
 RATE_LIMIT_REQUESTS=100
 RATE_LIMIT_WINDOW_SECONDS=60
 LOGIN_RATE_LIMIT_REQUESTS=10
 LOGIN_RATE_LIMIT_WINDOW_SECONDS=300
 
+# ── Energy calculations ───────────────────────────────────────────────────────
 IDLE_POWER_WATTS=65
 ACTIVE_POWER_WATTS=120
 ELECTRICITY_COST_PER_KWH=0.12
 
+# ── Server ────────────────────────────────────────────────────────────────────
 HTTP_PORT=80
 HTTPS_PORT=443
 LOG_LEVEL=INFO
+WORKERS=4
 
