--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,32 @@
-version: "3.9"
-
 # =============================================================================
 # GreenOps — Production Docker Compose
-# =============================================================================
 #
-# Startup order (strictly enforced by healthchecks):
+# Single-user PostgreSQL architecture
+# ─────────────────────────────────────
+# POSTGRES_USER (greenops) is both the PostgreSQL superuser and the app user.
+# This matches the existing volume which was initialized with greenops as
+# the sole role — there is no separate "postgres" superuser in this setup.
+#
+# How PostgreSQL Docker image handles credentials:
+#   • FIRST RUN (empty data dir): POSTGRES_USER and POSTGRES_PASSWORD are used
+#     to create the role. init-scripts run in alphabetical order.
+#   • SUBSEQUENT RUNS (data dir exists): These env vars are IGNORED by postgres.
+#     The role and its password are already baked into the data volume.
+#
+# Consequence: if you change POSTGRES_PASSWORD in .env after the first run,
+# PostgreSQL still uses the OLD password. To resync:
+#   docker compose down -v   # destroys DB data
+#   docker compose up --build
+#
+# Startup order (enforced by healthchecks):
 #   db (healthy) → server (healthy) → dashboard (healthy) → nginx
 #
-# Networks:
-#   backend  — db + server only. DB is never reachable from nginx or dashboard.
+# Network policy:
+#   backend  — db + server only. DB never reachable from nginx/dashboard.
 #   frontend — nginx + server + dashboard.
 #
 # Port policy:
-#   ONLY nginx binds a host port (80).
-#   server and dashboard use expose — internal only, unreachable from host.
-#   db uses expose — internal only, never accessible from outside Docker.
-#
-# Multi-worker admin creation race condition:
-#   Solved by Gunicorn preload_app=True in gunicorn.conf.py.
-#   The lifespan startup function runs ONCE in the master process before
-#   workers are forked. Workers inherit the already-initialized state.
-#   ensure_admin_exists() is also idempotent + IntegrityError-safe as backup.
-#
+#   ONLY nginx binds a host port (:80). Everything else uses expose.
 # =============================================================================
 
 services:
@@ -35,34 +40,35 @@ services:
     restart: unless-stopped
 
     environment:
-      POSTGRES_USER:              ${POSTGRES_USER:-greenops}
-      POSTGRES_PASSWORD:          ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
-      POSTGRES_DB:                ${POSTGRES_DB:-greenops}
-      POSTGRES_INITDB_ARGS:       "--encoding=UTF8 --locale=C"
-      POSTGRES_HOST_AUTH_METHOD:  scram-sha-256
+      # greenops is the PostgreSQL superuser and the app user.
+      # These values are used ONLY on first run (empty data dir).
+      # On subsequent starts, PostgreSQL ignores them — credentials live in the volume.
+      POSTGRES_USER:     ${POSTGRES_USER:-greenops}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required. See .env.example}
+      POSTGRES_DB:       ${POSTGRES_DB:-greenops}
+
+      POSTGRES_INITDB_ARGS: "--encoding=UTF8 --locale=C"
 
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      # SQL files in this directory are run ONCE on first container creation.
-      # Subsequent restarts skip them. Safe to keep multiple migration files.
-      - ./migrations:/docker-entrypoint-initdb.d:ro
+      # Init scripts run ONCE on first container creation (empty data dir).
+      # On subsequent starts they are skipped entirely.
+      - ./migrations/init-scripts:/docker-entrypoint-initdb.d:ro
 
     networks:
       - backend
 
-    # expose = internal Docker network only. NOT a host port binding.
-    # PostgreSQL listens on 5432 — do NOT bind to host or use port 8000.
     expose:
       - "5432"
 
     healthcheck:
-      # pg_isready checks that PostgreSQL is accepting connections.
-      # The -d flag ensures the specific database exists and is ready.
+      # pg_isready checks that PostgreSQL accepts connections on POSTGRES_DB.
+      # Uses POSTGRES_USER which exists on both fresh and existing volumes.
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-greenops} -d ${POSTGRES_DB:-greenops} -q"]
       interval: 5s
       timeout: 5s
-      retries: 12          # 60s total before giving up
-      start_period: 15s    # grace period for PG to initialize data directory
+      retries: 15
+      start_period: 15s
 
     deploy:
       resources:
@@ -84,37 +90,34 @@ services:
     restart: unless-stopped
 
     environment:
-      # DATABASE_URL is assembled here so the password is never duplicated
-      # in .env as both POSTGRES_PASSWORD and inside DATABASE_URL.
       DATABASE_URL: "postgresql+asyncpg://${POSTGRES_USER:-greenops}:${POSTGRES_PASSWORD:?}@db:5432/${POSTGRES_DB:-greenops}"
 
-      ENV:                          ${ENV:-production}
-      DEBUG:                        ${DEBUG:-false}
-      JWT_SECRET_KEY:               ${JWT_SECRET_KEY:?JWT_SECRET_KEY is required}
-      INITIAL_ADMIN_USERNAME:       ${INITIAL_ADMIN_USERNAME:-admin}
-      INITIAL_ADMIN_PASSWORD:       ${INITIAL_ADMIN_PASSWORD:?INITIAL_ADMIN_PASSWORD is required}
-      CORS_ORIGINS:                 ${CORS_ORIGINS:-http://localhost}
-      ACCESS_TOKEN_EXPIRE_MINUTES:  ${ACCESS_TOKEN_EXPIRE_MINUTES:-60}
-      REFRESH_TOKEN_EXPIRE_DAYS:    ${REFRESH_TOKEN_EXPIRE_DAYS:-30}
-      RATE_LIMIT_REQUESTS:          ${RATE_LIMIT_REQUESTS:-100}
-      RATE_LIMIT_WINDOW_SECONDS:    ${RATE_LIMIT_WINDOW_SECONDS:-60}
-      LOGIN_RATE_LIMIT_REQUESTS:    ${LOGIN_RATE_LIMIT_REQUESTS:-10}
+      ENV:                             ${ENV:-production}
+      DEBUG:                           ${DEBUG:-false}
+      JWT_SECRET_KEY:                  "${JWT_SECRET_KEY:?JWT_SECRET_KEY is required. See .env.example}"
+      INITIAL_ADMIN_USERNAME:          ${INITIAL_ADMIN_USERNAME:-admin}
+      INITIAL_ADMIN_PASSWORD:          ${INITIAL_ADMIN_PASSWORD:-admin123}
+      CORS_ORIGINS:                    ${CORS_ORIGINS:-http://localhost}
+      ACCESS_TOKEN_EXPIRE_MINUTES:     ${ACCESS_TOKEN_EXPIRE_MINUTES:-60}
+      REFRESH_TOKEN_EXPIRE_DAYS:       ${REFRESH_TOKEN_EXPIRE_DAYS:-30}
+      RATE_LIMIT_REQUESTS:             ${RATE_LIMIT_REQUESTS:-100}
+      RATE_LIMIT_WINDOW_SECONDS:       ${RATE_LIMIT_WINDOW_SECONDS:-60}
+      LOGIN_RATE_LIMIT_REQUESTS:       ${LOGIN_RATE_LIMIT_REQUESTS:-10}
       LOGIN_RATE_LIMIT_WINDOW_SECONDS: ${LOGIN_RATE_LIMIT_WINDOW_SECONDS:-300}
-      IDLE_POWER_WATTS:             ${IDLE_POWER_WATTS:-65}
-      ACTIVE_POWER_WATTS:           ${ACTIVE_POWER_WATTS:-120}
-      ELECTRICITY_COST_PER_KWH:     ${ELECTRICITY_COST_PER_KWH:-0.12}
-      LOG_LEVEL:                    ${LOG_LEVEL:-INFO}
-      WORKERS:                      ${WORKERS:-4}
+      IDLE_POWER_WATTS:                ${IDLE_POWER_WATTS:-65}
+      ACTIVE_POWER_WATTS:              ${ACTIVE_POWER_WATTS:-120}
+      ELECTRICITY_COST_PER_KWH:        ${ELECTRICITY_COST_PER_KWH:-0.12}
+      LOG_LEVEL:                       ${LOG_LEVEL:-INFO}
+      WORKERS:                         ${WORKERS:-4}
 
     depends_on:
       db:
-        condition: service_healthy   # hard gate: do not start until pg_isready passes
+        condition: service_healthy
 
     networks:
-      - backend    # talks to db
-      - frontend   # nginx talks to server
+      - backend
+      - frontend
 
-    # Internal only — nginx proxies inbound traffic. Host cannot reach :8000 directly.
     expose:
       - "8000"
 
@@ -122,8 +125,8 @@ services:
       test: ["CMD-SHELL", "curl -sf http://localhost:8000/health | grep -q '\"status\":\"healthy\"' || exit 1"]
       interval: 10s
       timeout: 8s
-      retries: 6
-      start_period: 40s   # Gunicorn worker spawn + DB init + admin creation
+      retries: 8
+      start_period: 60s
 
     deploy:
       resources:
@@ -147,7 +150,7 @@ services:
 
     depends_on:
       server:
-        condition: service_healthy   # don't start UI until API is confirmed ready
+        condition: service_healthy
 
     networks:
       - frontend
@@ -180,10 +183,7 @@ services:
     restart: unless-stopped
 
     ports:
-      # This is the ONLY host port binding in the entire stack.
-      # Everything else uses expose (internal only).
       - "${HTTP_PORT:-80}:80"
-      # TLS — uncomment when certificates are in place:
       # - "${HTTPS_PORT:-443}:443"
 
     volumes:
@@ -198,7 +198,7 @@ services:
         condition: service_healthy
 
     networks:
-      - frontend   # nginx only needs to reach server and dashboard
+      - frontend
 
     healthcheck:
       test: ["CMD-SHELL", "wget -qO- http://localhost/health > /dev/null 2>&1 || exit 1"]
@@ -223,11 +223,8 @@ volumes:
 # Networks
 # =============================================================================
 networks:
-  # backend: server ↔ db only.
-  # db is invisible to nginx and dashboard — correct principle of least privilege.
   backend:
     driver: bridge
 
-  # frontend: nginx ↔ server ↔ dashboard
   frontend:
     driver: bridge
