--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,241 +1,91 @@
-# =============================================================================
-# GreenOps — Production Docker Compose
-#
-# Startup order (enforced by healthchecks and depends_on):
-#   db (healthy) → migrate (exits 0) → server (healthy) → dashboard → nginx
-#
-# Key architectural change:
-#   A dedicated 'migrate' one-shot service runs ALL schema DDL before the
-#   application starts. This eliminates the deadlock caused by multiple
-#   Gunicorn workers racing to run CREATE TRIGGER / DROP TRIGGER against
-#   PostgreSQL's system catalog simultaneously.
-#
-# Network policy:
-#   backend  — db + server only. DB never reachable from nginx/dashboard.
-#   frontend — nginx + server + dashboard.
-#
-# Port policy:
-#   ONLY nginx binds a host port (:80). Everything else uses expose.
-#
-# PostgreSQL credential notes:
-#   POSTGRES_USER/PASSWORD are baked into the data volume on first init.
-#   Changing them after first run requires: docker compose down -v && up
-# =============================================================================
+version: "3.9"
 
 services:
 
-  # ---------------------------------------------------------------------------
-  # PostgreSQL 16
-  # ---------------------------------------------------------------------------
   db:
     image: postgres:16-alpine
     container_name: greenops-db
     restart: unless-stopped
-
     environment:
-      POSTGRES_USER:     ${POSTGRES_USER:-greenops}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required. See .env.example}
-      POSTGRES_DB:       ${POSTGRES_DB:-greenops}
-      POSTGRES_INITDB_ARGS: "--encoding=UTF8 --locale=C"
-
+      POSTGRES_USER: greenops
+      POSTGRES_PASSWORD: greenops
+      POSTGRES_DB: greenops
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
     networks:
       - backend
 
-    expose:
-      - "5432"
-
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-greenops} -d ${POSTGRES_DB:-greenops} -q"]
-      interval: 5s
-      timeout: 5s
-      retries: 15
-      start_period: 15s
-
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 128M
-
-  # ---------------------------------------------------------------------------
-  # Migration runner — one-shot, exits after applying all pending migrations.
-  # The server service will not start until this exits with code 0.
-  # ---------------------------------------------------------------------------
   migrate:
     build:
       context: .
       dockerfile: Dockerfile.migrate
     container_name: greenops-migrate
     restart: "no"
-
-    environment:
-      DB_HOST:           db
-      DB_PORT:           "5432"
-      POSTGRES_USER:     ${POSTGRES_USER:-greenops}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
-      POSTGRES_DB:       ${POSTGRES_DB:-greenops}
-
     depends_on:
-      db:
-        condition: service_healthy
-
+      - db
+    environment:
+      POSTGRES_USER: greenops
+      POSTGRES_PASSWORD: greenops
+      POSTGRES_DB: greenops
+      DB_HOST: db
+      DB_PORT: "5432"
     networks:
       - backend
 
-  # ---------------------------------------------------------------------------
-  # FastAPI Backend — Gunicorn + Uvicorn workers
-  # ---------------------------------------------------------------------------
   server:
     build:
       context: .
       dockerfile: Dockerfile.server
-      args:
-        BUILDKIT_INLINE_CACHE: "1"
     container_name: greenops-server
     restart: unless-stopped
-
-    environment:
-      DATABASE_URL: "postgresql+asyncpg://${POSTGRES_USER:-greenops}:${POSTGRES_PASSWORD:?}@db:5432/${POSTGRES_DB:-greenops}"
-
-      ENV:                             ${ENV:-production}
-      DEBUG:                           ${DEBUG:-false}
-      JWT_SECRET_KEY:                  "${JWT_SECRET_KEY:?JWT_SECRET_KEY is required. See .env.example}"
-      INITIAL_ADMIN_USERNAME:          ${INITIAL_ADMIN_USERNAME:-admin}
-      INITIAL_ADMIN_PASSWORD:          ${INITIAL_ADMIN_PASSWORD:-admin123}
-      CORS_ORIGINS:                    ${CORS_ORIGINS:-http://localhost}
-      ACCESS_TOKEN_EXPIRE_MINUTES:     ${ACCESS_TOKEN_EXPIRE_MINUTES:-60}
-      REFRESH_TOKEN_EXPIRE_DAYS:       ${REFRESH_TOKEN_EXPIRE_DAYS:-30}
-      RATE_LIMIT_REQUESTS:             ${RATE_LIMIT_REQUESTS:-100}
-      RATE_LIMIT_WINDOW_SECONDS:       ${RATE_LIMIT_WINDOW_SECONDS:-60}
-      LOGIN_RATE_LIMIT_REQUESTS:       ${LOGIN_RATE_LIMIT_REQUESTS:-10}
-      LOGIN_RATE_LIMIT_WINDOW_SECONDS: ${LOGIN_RATE_LIMIT_WINDOW_SECONDS:-300}
-      IDLE_POWER_WATTS:                ${IDLE_POWER_WATTS:-65}
-      ACTIVE_POWER_WATTS:              ${ACTIVE_POWER_WATTS:-120}
-      ELECTRICITY_COST_PER_KWH:        ${ELECTRICITY_COST_PER_KWH:-0.12}
-      LOG_LEVEL:                       ${LOG_LEVEL:-INFO}
-      WORKERS:                         ${WORKERS:-4}
-
     depends_on:
-      db:
-        condition: service_healthy
-      migrate:
-        condition: service_completed_successfully
-
+      - db
+      - migrate
+    environment:
+      DATABASE_URL: postgresql+asyncpg://greenops:greenops@db:5432/greenops
+      JWT_SECRET_KEY: abcdefghijklmnopqrstuvwxyz1234567890
+      ENV: production
+      DEBUG: "false"
     networks:
       - backend
       - frontend
+    ports:
+      - "8000:8000"
 
-    expose:
-      - "8000"
-
-    healthcheck:
-      test: ["CMD-SHELL", "curl -sf http://localhost:8000/health | grep -q '\"status\":\"healthy\"' || exit 1"]
-      interval: 10s
-      timeout: 8s
-      retries: 8
-      start_period: 60s
-
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 128M
-
-  # ---------------------------------------------------------------------------
-  # Next.js Dashboard
-  # ---------------------------------------------------------------------------
   dashboard:
     build:
       context: .
       dockerfile: Dockerfile.dashboard
     container_name: greenops-dashboard
     restart: unless-stopped
-
+    depends_on:
+      - server
     environment:
       NODE_ENV: production
-
-    depends_on:
-      server:
-        condition: service_healthy
-
+      NEXT_PUBLIC_API_URL: http://localhost:8000
     networks:
       - frontend
+    ports:
+      - "3000:3000"
 
-    expose:
-      - "3000"
-
-    healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:3000/ > /dev/null 2>&1 || exit 1"]
-      interval: 15s
-      timeout: 8s
-      retries: 4
-      start_period: 30s
-
-    deploy:
-      resources:
-        limits:
-          memory: 256M
-        reservations:
-          memory: 64M
-
-  # ---------------------------------------------------------------------------
-  # Nginx — the ONLY service with a host port binding
-  # ---------------------------------------------------------------------------
   nginx:
     build:
       context: .
       dockerfile: Dockerfile.nginx
     container_name: greenops-nginx
     restart: unless-stopped
-
-    ports:
-      - "${HTTP_PORT:-80}:80"
-      # - "${HTTPS_PORT:-443}:443"
-
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d/greenops.conf:/etc/nginx/conf.d/greenops.conf:ro
-      - ./nginx/certs:/etc/nginx/certs:ro
-
     depends_on:
-      server:
-        condition: service_healthy
-      dashboard:
-        condition: service_healthy
-
+      - server
+      - dashboard
     networks:
       - frontend
+    ports:
+      - "80:80"
 
-    healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost/health > /dev/null 2>&1 || exit 1"]
-      interval: 15s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
-
-    deploy:
-      resources:
-        limits:
-          memory: 64M
-
-# =============================================================================
-# Volumes
-# =============================================================================
 volumes:
   postgres_data:
-    driver: local
 
-# =============================================================================
-# Networks
-# =============================================================================
 networks:
   backend:
-    driver: bridge
-
   frontend:
-    driver: bridge
+
